<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_account_circle_white_24dp"
        android:title="@string/txt_profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/new_ticket"
        android:title="@string/txt_new_ticket" />
    <item
        android:id="@+id/all_my_tickets"
        android:title="@string/txt_all_my_tickets" />
    <item
        android:id="@+id/all_tickets"
        android:title="@string/txt_all_tickets" />
    <item
        android:id="@+id/community_services"
        android:title="@string/txt_community_services" />
    <item
        android:id="@+id/logout"
        android:title="@string/txt_logout" />
</menu>